<resources>
    <string name="app_name">QGCloud</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="name">姓名</string>
    <string name="phone_number">手机</string>
    <string name="name_limit">此处只支持中文</string>
    <string name="validate_code">验证码</string>
    <string name="password_limit">支持6~15位数字、字母和符号</string>
    <string name="new_password">新密码</string>
    <string name="finish_set_new_password">完成</string>
    <string name="get_code">点击获取验证码</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">原密码</string>
    <string name="check_password">确认密码</string>
    <string name="submit">提交</string>
    <string name="personal_msg">个人信息</string>
    <string name="avatar">头像</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="address_list">通讯录</string>
    <string name="change_phone">更改手机</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="cloud_disk">云盘</string>
    <string name="my">我的</string>
    <string name="transmit_list">传输列表</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
