<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/colorBtn">

        <ImageView
            android:id="@+id/imv_change_back"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_30"
            android:src="@drawable/ic_white_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/colorTextWhite"
            android:textSize="25sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_60">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextBlack"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal"
            android:text="@string/old_password"
            />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="@dimen/dp_240"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:gravity="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="@dimen/dp_240"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal"
            android:text="@string/check_password"/>

        <EditText
            android:id="@+id/edt_register_email"
            android:layout_width="216dp"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="16sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_46"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:textSize="24sp"
        android:textColor="@color/colorTextWhite"
        android:background="@drawable/bg_btn"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>