<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_forget_back"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20sp"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:src="@drawable/backblack"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="170dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorTextBlack"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal"
            android:text="@string/email"
            />

        <EditText
            android:id="@+id/edt_forget_email"
            android:layout_width="264dp"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="20sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/validate_code"
            android:gravity="center"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edt_forget_code"
            android:layout_width="126dp"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="20sp"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="@dimen/dp_114"
            android:layout_height="28dp"
            android:text="@string/get_code"
            android:textSize="14sp"
            android:textColor="@color/colorTextWhite"
            android:textStyle="normal"
            android:gravity="center"
            android:paddingStart="@dimen/dp_8"
            android:paddingEnd="@dimen/dp_8"
            android:layout_marginTop="6dp"
            android:background="@drawable/coderound"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextBlack"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="normal"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/edt_forget_new_password"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:textColor="@color/colorTextBlack"
            android:textSize="20sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish_set_new_password"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/finish_set_new_password"
        android:textSize="24sp"
        android:textColor="@color/colorTextWhite"
        android:background="@drawable/round"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>