<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_270"
    android:layout_height="140dp"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_phone"
            android:textSize="18sp"
            android:textColor="@color/colorTextBlack"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/edt_change_phone"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textColor="@color/colorTextBlack"
            android:textStyle="normal"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="80dp"
            android:layout_height="@dimen/dp_36"
            android:layout_marginStart="@dimen/dp_20"
            android:background="@drawable/bg_dialog"
            android:textColor="@color/colorTextBlack"
            android:textStyle="normal"
            android:textSize="16sp"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_36"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/dp_30"
            android:background="@drawable/bg_get_code"
            android:textColor="@color/colorTextWhite"
            android:textStyle="normal"
            android:textSize="16sp"
            android:text="@string/sure"/>

    </RelativeLayout>

</LinearLayout>