<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/personal_msg_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/colorBtn">

        <ImageView
            android:id="@+id/imv_personal_back"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_25"
            android:layout_marginStart="@dimen/dp_15"
            android:src="@drawable/ic_white_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/personal_msg"
            android:textColor="@color/colorTextWhite"
            android:textSize="23sp"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_height="@dimen/dp_100">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/avatar"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imv_personal_icon"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_20"/>

    </RelativeLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_66">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20sp"
        android:textColor="@color/colorTextBlack"/>

    <TextView
        android:id="@+id/tv_personal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/dp_25"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorTextBlack"
        />

</RelativeLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"/>

        <TextView
            android:id="@+id/tv_change_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/dp_25"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"/>

    </RelativeLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_66">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_25"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"/>

        <TextView
            android:id="@+id/tv_personal_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/dp_25"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorTextBlack"
            />

    </RelativeLayout>

</LinearLayout>