<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/bg_person_card"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imv_my_icon"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_90"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_30"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_my_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextBlack"
                android:textSize="20sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_my_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:textSize="16sp"
                android:textColor="@color/colorTextGray"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_my_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_2"
                android:textSize="16sp"
                android:textColor="@color/colorTextGray"
                android:textStyle="normal"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_personal_msg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:layout_marginTop="@dimen/dp_25"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_gravity="center"
            android:src="@drawable/ic_personal_msg"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_14"
            android:layout_gravity="center"
            android:text="@string/personal_msg"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dp_19"/>

    </LinearLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/layout_change_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_gravity="center"
            android:src="@drawable/ic_change_password"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_gravity="center"
            android:text="@string/change_password"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dp_19"/>

    </LinearLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/layout_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_gravity="center"
            android:src="@drawable/ic_setting"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dp_19"/>

    </LinearLayout>

    <View
        android:layout_width="360dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/layout_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_58"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_28"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_gravity="center"
            android:src="@drawable/ic_exit"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_18"
            android:layout_gravity="center"
            android:text="@string/exit"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dp_19"/>

    </LinearLayout>

</LinearLayout>